feat: Backend projeleri için altyapı dosyaları ve yeni kullanıcı arayüzü bileşenleri eklendi.

--- a/UI/src/index.html
+++ b/UI/src/index.html
@@ -33,6 +33,10 @@
             accent: "#F5A623", // Vurgu Turuncu
             "light-gray": "#f8f9fa",
             "dark-gray": "#343a40",
+            "text-dark": "#1f2937", // gray-800 equivalent
+            "text-muted": "#4b5563", // gray-600 equivalent
+            "input-bg": "#f9fafb", // gray-50 equivalent
+            "input-border": "#e5e7eb", // gray-200 equivalent
           },
         },
       },
